# cs410-ray-tracer

./: README.md
CS410_Ray_Tracer/: CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  Obj.cpp  Obj.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  checker.mtl  driver00.txt  test.cpp  two_triangles.mtl
